--- a/js-objects.html
+++ b/js-objects.html
@@ -16,5 +16,10 @@
 </head>
 <body>
 	<h1 id="main-heading">Introduction to JavaScript Objects</h1>
+<script>
+	let myObject = {
+		name: 'Bob'
+	};
+</script>
 </body>
 </html>
