--- a/js-objects.html
+++ b/js-objects.html
@@ -18,7 +18,10 @@
 	<h1 id="main-heading">Introduction to JavaScript Objects</h1>
 <script>
 	let myObject = {
-		name: 'Bob'
+		name: 'Bob',
+		age: 24,
+		alive: true,
+		favFood: ['pizza','Popcorn','Ice Cream']
 	};
 </script>
 </body>
